--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
                 <span class="text-white text-lg">❤️</span>
             </div></a>
             <div>
-                <h2 class="font-semibold text-gray-800">Our Story Admin</h2>
+                <h2 class="font-semibold text-gray-800">Soulprints Admin</h2>
                 <p class="text-sm text-gray-600">{{ user?.yourName }}</p>
             </div>
         </div>
