--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -5,7 +5,7 @@
             Welcome back, {{ user?.yourName }}! ❤️
         </h1>
         <p class="text-gray-600 mt-2">
-            Your love story with {{ user?.partnerName }} continues to grow beautiful
+            Your story with {{ user?.partnerName }} continues to grow beautiful
         </p>
     </div>
 
