--- a/src/app/web/home/home.component.html
+++ b/src/app/web/home/home.component.html
@@ -11,7 +11,7 @@
 
     <app-animated-section animation="slide-up" [delay]="200">
       <h1 style="font-family: 'Dancing', cursive;"
-        class="font-dancing text-3xl md:text-5xl font-bold text-pink-600 mb-6">Welcome to Our Story 💕</h1>
+        class="font-dancing text-3xl md:text-5xl font-bold text-pink-600 mb-6">Welcome to Soulprints💕</h1>
     </app-animated-section>
 
     <app-animated-section animation="fade-in" [delay]="600">
