--- a/src/app/web/memory-page/memory-page.component.html
+++ b/src/app/web/memory-page/memory-page.component.html
@@ -33,7 +33,7 @@
 
       <div class="flex flex-col sm:flex-row gap-2 mb-6">
         <input type="text" [ngModel]="newReminder().text" (ngModelChange)="updateReminderText($event)"
-          placeholder="Don't forget this one..."
+          placeholder="e.g. Our friends birthday date..."
           class="flex-grow px-4 py-2 rounded-lg sm:rounded-l-lg sm:rounded-r-none border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300" />
         <input type="date" [ngModel]="newReminder().date" (ngModelChange)="updateReminderDate($event)"
           class="px-4 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300 sm:rounded-none" />
