--- a/src/app/components/timeline-card/timeline-card.component.html
+++ b/src/app/components/timeline-card/timeline-card.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Text Section -->
-    <div class="w-full md:w-1/2 px-4 mt-4 md:mt-0" [ngClass]="{ 'md:text-right': !isLeft, 'md:text-left': isLeft }">
+    <div class="w-full md:w-1/2 px-4 mt-4 md:mt-0 md:text-left" >
       <h3 class="text-2xl font-semibold mb-2">{{ title }}</h3>
       <p class="text-gray-600">{{ description }}</p>
     </div>
