--- a/src/app/web/our-vibes/our-vibes.component.html
+++ b/src/app/web/our-vibes/our-vibes.component.html
@@ -10,10 +10,14 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-4">
       <ng-container *ngFor="let entry of safePlaylistUrls">
         <div class="bg-gray-800 rounded-lg shadow-lg overflow-hidden">
-          <div class="p-4 border-b border-gray-700">
-            <h2 class="text-xl font-semibold text-pink-300 text-center">
+         <div class="p-4 border-b border-gray-700 flex justify-between items-center relative">
+            <h2 class="text-xl font-semibold text-pink-300 text-center w-full">
               {{ entry.item.playlistName }}
             </h2>
+            <a class="absolute right-4 text-pink-400 hover:text-pink-200" [href]="entry.item.playlistUrl"
+              target="_blank" rel="noopener">
+              <lucide-icon [name]="Youtube" class="w-6 h-6"></lucide-icon>
+            </a>
           </div>
           <iframe
             class="w-full"
